--- a/DevOpsTest/Views/Home/About.cshtml
+++ b/DevOpsTest/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>This text is not the original text.</p>
+<p>This text is not the original text but a changed text.</p>
